Moving forwards + working on a small framework to be extracted into another repo later

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <main id="main">
-      <section class="run-game">
-          <button id="start">Start the game!</button>
+      <section class="game-grid hidden" id="grid"></section>
+      <section class="run-game" id="run">
+        <button id="start">Start the game!</button>
       </section>
     </main>
     <script src="index.js"></script>
